--- a/OmyAk/View/Base.lproj/Main.storyboard
+++ b/OmyAk/View/Base.lproj/Main.storyboard
@@ -17,22 +17,6 @@
         </array>
     </customFonts>
     <scenes>
-        <!--Navigation Controller-->
-        <scene sceneID="cNs-xl-hZt">
-            <objects>
-                <navigationController id="uvI-Jd-9Pg" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="BBd-G9-1mQ">
-                        <rect key="frame" x="0.0" y="47" width="390" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="SLk-uw-2ut" kind="relationship" relationship="rootViewController" id="bgc-rY-Z91"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="8XA-YO-TVM" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="951" y="-58"/>
-        </scene>
         <!--Main Tab Bar Controller-->
         <scene sceneID="n8d-l7-14J">
             <objects>
@@ -48,7 +32,7 @@
                         <outlet property="homeTabBar" destination="kd2-RT-tBX" id="GLK-dw-BVF"/>
                         <segue destination="rhw-ca-8Nb" kind="relationship" relationship="viewControllers" id="LTo-TB-wRz"/>
                         <segue destination="OyC-Qv-DxC" kind="relationship" relationship="viewControllers" id="w6l-Ii-H7D"/>
-                        <segue destination="uEK-9z-Pf3" kind="relationship" relationship="viewControllers" id="4FC-0o-JWA"/>
+                        <segue destination="uEK-9z-Pf3" kind="relationship" relationship="viewControllers" id="ISb-1S-1gH"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wWW-th-59h" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -150,13 +134,32 @@
             </objects>
             <point key="canvasLocation" x="-2003" y="399"/>
         </scene>
+        <!--SettingMenu-->
+        <scene sceneID="Q4B-5e-3Fd">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Setting" referencedIdentifier="SettingMenu" id="ooS-LX-RTp" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="2W7-iw-Iyx"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bi3-em-abQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-978" y="416"/>
+        </scene>
         <!--더보기-->
         <scene sceneID="o2k-ct-B8m">
             <objects>
-                <viewController storyboardIdentifier="More" id="uEK-9z-Pf3" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Setting" id="uEK-9z-Pf3" sceneMemberID="viewController">
                     <view key="view" autoresizesSubviews="NO" contentMode="scaleToFill" id="4vq-TV-i5n">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bMe-O8-RZZ">
+                                <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                <connections>
+                                    <segue destination="ooS-LX-RTp" kind="embed" id="lCo-4K-Zbj"/>
+                                </connections>
+                            </containerView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="KWP-2h-IzU"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <color key="tintColor" systemColor="systemYellowColor"/>
@@ -165,94 +168,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jd9-7W-S6H" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1222" y="-60"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="FIt-5K-KYV">
-            <objects>
-                <viewController id="SLk-uw-2ut" customClass="ViewController" customModule="OmyAk" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="vgA-pf-fsf">
-                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" spacing="125" translatesAutoresizingMaskIntoConstraints="NO" id="Y7x-ZH-fou">
-                                <rect key="frame" x="70" y="223" width="261.66666666666669" height="34.333333333333314"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="음악 장르 선택" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Wr-bE-EcJ">
-                                        <rect key="frame" x="0.0" y="0.0" width="97" height="34.333333333333336"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wf5-2d-vqA">
-                                        <rect key="frame" x="222" y="0.0" width="39.666666666666686" height="34.333333333333336"/>
-                                        <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                        <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" image="chevron.forward" catalog="system"/>
-                                        <connections>
-                                            <segue destination="udT-os-YEW" kind="show" id="9yX-3k-mei"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
-                            </stackView>
-                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="epc-8e-eXo">
-                                <rect key="frame" x="20" y="287" width="350" height="70"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="70" id="T81-nK-XEK"/>
-                                </constraints>
-                            </datePicker>
-                        </subviews>
-                        <viewLayoutGuide key="safeArea" id="Iwb-AD-pu8"/>
-                        <color key="backgroundColor" red="0.85098039215686272" green="0.89803921568627454" blue="0.89803921568627454" alpha="1" colorSpace="calibratedRGB"/>
-                        <constraints>
-                            <constraint firstItem="Iwb-AD-pu8" firstAttribute="bottom" secondItem="epc-8e-eXo" secondAttribute="bottom" constant="453" id="U33-ji-OBn"/>
-                            <constraint firstItem="Iwb-AD-pu8" firstAttribute="trailing" secondItem="epc-8e-eXo" secondAttribute="trailing" constant="20" id="aHK-BE-BPp"/>
-                            <constraint firstItem="epc-8e-eXo" firstAttribute="leading" secondItem="Iwb-AD-pu8" secondAttribute="leading" constant="20" id="bBR-uD-wVK"/>
-                            <constraint firstItem="Y7x-ZH-fou" firstAttribute="leading" secondItem="Iwb-AD-pu8" secondAttribute="leading" constant="70" id="gig-I0-yp4"/>
-                            <constraint firstItem="Y7x-ZH-fou" firstAttribute="top" secondItem="Iwb-AD-pu8" secondAttribute="top" constant="132" id="r4c-kl-zPw"/>
-                        </constraints>
-                    </view>
-                    <navigationItem key="navigationItem" id="Wnc-Jf-HmZ"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="t2I-lb-gG6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1978" y="-58"/>
-        </scene>
-        <!--음악 장르 선택-->
-        <scene sceneID="tuv-uR-4w4">
-            <objects>
-                <tableViewController id="udT-os-YEW" customClass="CategoryTableViewController" customModule="OmyAk" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="fdr-IA-Tdb">
-                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="0.85098039219999999" green="0.8980392157" blue="0.8980392157" alpha="1" colorSpace="calibratedRGB"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="44" id="ji2-qY-tnQ">
-                                <rect key="frame" x="0.0" y="50" width="390" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ji2-qY-tnQ" id="rkC-LZ-Ps0">
-                                    <rect key="frame" x="0.0" y="0.0" width="390" height="44"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                                <color key="backgroundColor" red="0.85098039219999999" green="0.8980392157" blue="0.8980392157" alpha="1" colorSpace="calibratedRGB"/>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="udT-os-YEW" id="BBH-Hl-tB3"/>
-                            <outlet property="delegate" destination="udT-os-YEW" id="3ef-n7-nym"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" title="음악 장르 선택" id="yes-n8-7RG"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="eDx-fP-1yW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2828" y="-58"/>
+            <point key="canvasLocation" x="-977" y="-58"/>
         </scene>
     </scenes>
     <resources>
         <image name="AddBtn" width="60" height="60"/>
         <image name="_monthlylbl_bg" width="109" height="13"/>
-        <image name="chevron.forward" catalog="system" width="97" height="128"/>
         <image name="homeIcon" width="24" height="24"/>
         <image name="home_highlight" width="24" height="24"/>
         <image name="moreIcon" width="24" height="24"/>
