--- a/SoundLog/View/Setting.storyboard
+++ b/SoundLog/View/Setting.storyboard
@@ -66,7 +66,7 @@
         <!--Bookmark View Controller-->
         <scene sceneID="0y9-9R-upi">
             <objects>
-                <viewController storyboardIdentifier="BookmarkViewController" id="6qS-SJ-ere" customClass="BookmarkViewController" customModule="OmyAk" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="BookmarkViewController" id="6qS-SJ-ere" customClass="BookmarkViewController" customModule="OmyAk" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="NZ1-Bj-8N4">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -107,7 +107,7 @@
         <!--Setting View Controller-->
         <scene sceneID="Mha-qM-uAB">
             <objects>
-                <viewController storyboardIdentifier="SettingMenu" id="2Nc-OJ-HIS" customClass="SettingViewController" customModule="OmyAk" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SettingMenus" id="2Nc-OJ-HIS" customClass="SettingViewController" customModule="OmyAk" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Hc6-S6-Qkg">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
